workspace = { members = ["html_regex"] }

[package]
name = "torytis"
version = "1.2.1"
edition = "2021"

[dependencies]
axum = "0.7.4"
chrono = "0.4.32"
clap = { version = "4.4.17", features = ["derive"] }
encoding_rs = "0.8.33"
glob = "0.3.1"
html5ever = "0.27.0"
include_dir = { version = "0.7.3", features = ["glob"] }
regex = "1.10.2"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.1", features = ["fs"] }
version-compare = "0.2.0"
xmltree = "0.10.3"
html_regex = { path = "./html_regex"}
serde_qs = "0.13.0"
