workspace = { members = ["html_regex"] }

[package]
name = "torytis"
version = "1.3.4"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
encoding_rs = "0.8.34"
glob = "0.3.1"
html5ever = "0.28.0"
include_dir = { version = "0.7.4", features = ["glob"] }
regex = "1.10.6"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["fs"] }
version-compare = "0.2.0"
xmltree = "0.11.0"
html_regex = { path = "./html_regex"}
serde_qs = "0.13.0"
